browser/themes/osx/browser.css
/* ... */
#
wrapper
-
urlbar
-
container
[
place
=
"
palette
"
]
{
max
-
width
:
20em
;
}
.
urlbar
-
display
{
margin
-
top
:
0
;
margin
-
bottom
:
0
;
color
:
GrayText
;
}
%
include
.
.
/
shared
/
urlbarSearchSuggestionsNotification
.
inc
.
css
/
*
-
-
-
-
-
AUTOCOMPLETE
-
-
-
-
-
*
/
%
include
.
.
/
shared
/
autocomplete
.
inc
.
css
%
include
.
.
/
shared
/
urlbar
-
autocomplete
.
inc
.
css
#
PopupAutoComplete
>
richlistbox
>
richlistitem
[
originaltype
~
=
"
datalist
-
first
"
]
{
border
-
top
:
1px
solid
#
C7C7C7
;
}
.
ac
-
title
{
font
-
size
:
14px
;
}
.
ac
-
separator
.
ac
-
url
.
ac
-
action
.
ac
-
tags
{
font
-
size
:
12px
;
}
html
|
span
.
ac
-
tag
{
background
-
color
:
hsl
(
216
0
%
88
%
)
;
color
:
hsl
(
0
0
%
0
%
)
;
border
-
radius
:
2px
;
border
:
1px
solid
transparent
;
padding
:
0
1px
;
}
.
ac
-
separator
:
not
(
[
selected
=
true
]
)
{
color
:
hsl
(
0
0
%
50
%
)
;
}
.
ac
-
url
:
not
(
[
selected
=
true
]
)
{
color
:
hsl
(
210
77
%
47
%
)
;
}
.
ac
-
action
:
not
(
[
selected
=
true
]
)
{
color
:
hsl
(
178
100
%
28
%
)
;
}
.
ac
-
tags
-
text
[
selected
]
>
html
|
span
.
ac
-
tag
{
background
-
color
:
hsl
(
0
0
%
100
%
)
;
color
:
hsl
(
210
80
%
40
%
)
;
}
html
|
span
.
ac
-
emphasize
-
text
-
title
html
|
span
.
ac
-
emphasize
-
text
-
tag
html
|
span
.
ac
-
emphasize
-
text
-
url
{
font
-
weight
:
600
;
}
.
ac
-
type
-
icon
[
type
=
bookmark
]
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
bookmark
.
svg
"
)
;
-
moz
-
context
-
properties
:
fill
;
fill
:
#
b2b2b2
;
}
.
ac
-
type
-
icon
[
type
=
bookmark
]
[
selected
]
[
current
]
{
fill
:
white
;
}
.
ac
-
type
-
icon
[
type
=
keyword
]
.
ac
-
site
-
icon
[
type
=
searchengine
]
{
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
search
-
glass
.
svg
)
;
-
moz
-
context
-
properties
:
fill
;
fill
:
GrayText
;
}
.
ac
-
type
-
icon
[
type
=
keyword
]
[
selected
]
.
ac
-
site
-
icon
[
type
=
searchengine
]
[
selected
]
{
fill
:
highlighttext
;
}
.
ac
-
type
-
icon
[
type
=
switchtab
]
.
ac
-
type
-
icon
[
type
=
remotetab
]
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
urlbar
-
tab
.
svg
"
)
;
-
moz
-
context
-
properties
:
fill
;
fill
:
#
b2b2b2
;
}
.
ac
-
type
-
icon
[
type
=
switchtab
]
[
selected
]
.
ac
-
type
-
icon
[
type
=
remotetab
]
[
selected
]
{
fill
:
white
;
}
.
autocomplete
-
treebody
:
:
-
moz
-
tree
-
cell
-
text
(
treecolAutoCompleteComment
)
{
color
:
GrayText
;
}
.
autocomplete
-
treebody
:
:
-
moz
-
tree
-
cell
-
text
(
suggesthint
treecolAutoCompleteComment
)
.
autocomplete
-
treebody
:
:
-
moz
-
tree
-
cell
-
text
(
suggestfirst
treecolAutoCompleteComment
)
{
color
:
GrayText
;
font
-
size
:
smaller
;
}
.
autocomplete
-
treebody
:
:
-
moz
-
tree
-
cell
(
suggesthint
)
{
border
-
top
:
1px
solid
GrayText
;
}
#
BMB_bookmarksPopup
[
side
=
"
top
"
]
#
BMB_bookmarksPopup
[
side
=
"
bottom
"
]
{
margin
-
left
:
-
26px
;
margin
-
right
:
-
26px
;
}
#
BMB_bookmarksPopup
[
side
=
"
left
"
]
#
BMB_bookmarksPopup
[
side
=
"
right
"
]
{
margin
-
top
:
-
26px
;
margin
-
bottom
:
-
26px
;
}
/
*
BOOKMARKING
PANEL
*
/
#
editBookmarkPanelStarIcon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
places
/
starred48
.
png
"
)
;
width
:
48px
;
height
:
48px
;
}
media
(
min
-
resolution
:
2dppx
)
{
#
editBookmarkPanelStarIcon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
places
/
starred48
2x
.
png
"
)
;
-
moz
-
image
-
region
:
rect
(
0px
96px
96px
0px
)
;
}
}
#
editBookmarkPanelTitle
{
font
-
size
:
130
%
;
font
-
weight
:
bold
;
}
#
editBMPanel_rows
>
row
{
margin
-
bottom
:
8px
;
}
#
editBMPanel_rows
>
row
:
last
-
of
-
type
{
margin
-
bottom
:
0
;
}
/
*
*
*
*
Input
elements
*
*
*
*
/
#
editBMPanel_rows
>
row
>
textbox
#
editBMPanel_rows
>
row
>
hbox
>
textbox
{
-
moz
-
appearance
:
none
;
background
:
linear
-
gradient
(
#
fafafa
#
fff
)
;
background
-
clip
:
padding
-
box
;
border
-
radius
:
3px
;
border
:
1px
solid
rgba
(
0
0
0
.
3
)
!
important
;
box
-
shadow
:
inset
0
1px
1px
1px
rgba
(
0
0
0
.
05
)
0
1px
rgba
(
255
255
255
.
3
)
;
margin
:
0
;
padding
:
3px
6px
;
}
#
editBMPanel_rows
>
row
>
textbox
[
focused
=
"
true
"
]
#
editBMPanel_rows
>
row
>
hbox
>
textbox
[
focused
=
"
true
"
]
{
border
-
color
:
-
moz
-
mac
-
focusring
!
important
;
box
-
shadow
:
var
(
-
-
focus
-
ring
-
box
-
shadow
)
;
}
/
*
*
*
*
HUD
style
buttons
*
*
*
*
/
.
editBookmarkPanelHeaderButton
.
editBookmarkPanelBottomButton
{
hudButton
margin
:
0
;
min
-
width
:
82px
;
min
-
height
:
22px
;
}
.
editBookmarkPanelHeaderButton
:
hover
:
active
.
editBookmarkPanelBottomButton
:
hover
:
active
{
hudButtonPressed
}
.
editBookmarkPanelHeaderButton
:
-
moz
-
focusring
.
editBookmarkPanelBottomButton
:
-
moz
-
focusring
{
box
-
shadow
:
var
(
-
-
focus
-
ring
-
box
-
shadow
)
;
}
.
editBookmarkPanelBottomButton
[
default
=
"
true
"
]
{
background
-
color
:
#
666
;
}
#
editBookmarkPanelHeader
{
margin
-
bottom
:
6px
;
}
.
editBookmarkPanelBottomButton
:
last
-
child
{
margin
-
inline
-
start
:
8px
;
}
/
*
The
following
elements
come
from
editBookmarkOverlay
.
xul
.
Styling
that
'
s
specific
to
the
editBookmarkPanel
should
be
in
browser
.
css
.
Styling
that
should
be
shared
by
all
editBookmarkOverlay
.
xul
consumers
should
be
in
editBookmarkOverlay
.
css
.
*
/
#
editBMPanel_newFolderBox
{
background
:
linear
-
gradient
(
#
fff
#
f2f2f2
)
;
background
-
origin
:
padding
-
box
;
background
-
clip
:
padding
-
box
;
border
-
radius
:
0
0
3px
3px
;
border
:
1px
solid
#
a5a5a5
;
box
-
shadow
:
inset
0
1px
rgba
(
255
255
255
.
8
)
inset
0
0
1px
rgba
(
255
255
255
.
25
)
0
1px
rgba
(
255
255
255
.
3
)
;
margin
:
0
;
padding
:
0
;
height
:
20px
;
}
#
editBMPanel_newFolderButton
{
-
moz
-
appearance
:
none
;
border
:
0
solid
#
a5a5a5
;
border
-
inline
-
end
-
width
:
1px
;
padding
:
0
9px
;
margin
:
0
;
min
-
width
:
21px
;
min
-
height
:
20px
;
height
:
20px
;
color
:
#
fff
;
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
panel
-
plus
-
sign
.
png
"
)
;
position
:
relative
;
}
/* ... */

