Bug 1406353 - Give autocomplete panel extra margin. r=dao
MozReview-Commit-ID: A1jR564IKjt

UltraBlame original commit: b3e87f7a8f387a3e7f5a4e35757cda06aabc98dc

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -2665,6 +2665,68 @@ autocomplete
 inc
 .
 css
+/
+*
+Give
+an
+extra
+margin
+top
+to
+align
+the
+top
+of
+the
+awesomebar
+with
+the
+*
+bottom
+of
+the
+nav
+bar
+OSX
+calculates
+the
+panel
+position
+with
+an
+missing
+*
+1px
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1406353
+*
+/
+#
+PopupAutoCompleteRichResult
+{
+margin
+-
+top
+:
+1px
+;
+}
 #
 PopupAutoComplete
 >
